--- a/.github/workflows/Build_DS3615xs_7.0.1-42218.yml
+++ b/.github/workflows/Build_DS3615xs_7.0.1-42218.yml
@@ -78,9 +78,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
-#      - name: 上传引导镜像到 Github Actions
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: ${{matrix.platform}} ${{matrix.version}}
-#          path: /home/runner/redpill-load/images/*.img
-#          if-no-files-found: error
+      - name: 上传引导镜像到 Github Actions
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{matrix.platform}} ${{matrix.version}}
+          path: /home/runner/redpill-load/images/*.img
+          if-no-files-found: error
